restricted admin bootsrap after first setup
